# physical-humanoid-book

./: .gitignore  CLAUDE.md  alembic.ini
.claude/: settings.local.json
.specify/memory/: constitution.md
backend/: README.md  requirements.txt
backend/src/api/: agent.py
backend/src/cli/: __init__.py  ingestion_pipeline.py  retrieve.py
backend/src/models/: __init__.py  embedding.py
backend/src/services/: __init__.py  crawler.py  embedding_generator.py  text_processor.py  vector_storage.py
backend/tests/integration/: __init__.py  test_agent_lifecycle.py  test_crawler.py  test_embedding_generator.py  test_ingestion_pipeline.py  test_vector_retrieval_integration.py  test_vector_storage.py
backend/tests/unit/: __init__.py  test_api_agent.py  test_crawler.py  test_embedding_generator.py  test_vector_storage.py
book-frontend/: README.md  docusaurus.config.js  docusaurus.config.js.backup  package-lock.json  package.json  sidebars.js
book-frontend/docs/module-1-robotic-nervous-system/: chapter-1-ros2-basics.md  chapter-2-python-ros2.md  chapter-3-urdf-modeling.md  index.md
book-frontend/docs/module-2-digital-twin/: chapter-1-gazebo-physics.md  chapter-2-environment-modeling.md  chapter-3-sensor-simulation.md  index.md
book-frontend/docs/module-3-ai-robot-brain/: chapter-1-exercises.md  chapter-1-nvidia-isaac-sim-photorealistic-simulation.md  chapter-2-exercises.md  chapter-2-isaac-ros-vslam-navigation.md  chapter-3-exercises.md  chapter-3-nav-path-planning-humanoid-robots.md  index.md  solutions-guide.md
book-frontend/docs/module-4-vla/: chapter-1-voice-to-action-whisper.md  chapter-2-cognitive-planning-llm.md  chapter-3-capstone-autonomous-humanoid.md  index.md
book-frontend/src/css/: advanced-theme.css  custom.css  enhanced-sidebar.css  enhanced-theme.css  theme.css
book-frontend/src/models/: QueryRequest.js  ResponseObject.js
book-frontend/src/pages/: index.js  index.module.css
book-frontend/src/theme/: DocPage.js  Root.js
history/prompts/001-book-embeddings/: 007-book-embeddings-spec.spec.prompt.md  008-book-embeddings-plan.plan.prompt.md  009-book-embeddings-tasks.tasks.prompt.md  010-book-embeddings-implementation.green.prompt.md
history/prompts/002-book-rag-chatbot/: 1-create-plan.plan.prompt.md  1-create-spec.spec.prompt.md  1-create-tasks.tasks.prompt.md
history/prompts/002-retrieval-pipeline-validation/: 2-spec-retrieval-pipeline-validation.spec.prompt.md  3-plan-retrieval-pipeline-validation.plan.prompt.md  4-tasks-retrieval-pipeline-validation.tasks.prompt.md  (+1 more)
isaac_nav2_integration/: setup.cfg
isaac_nav2_integration/isaac_nav2_integration/: behavior_manager.py  nav2_controller.py  path_planner.py
isaac_nav2_integration/launch/: isaac_nav2_system.launch.py
isaac_ros2_ws/src/isaac_nav2_integration/: package.xml  setup.py
isaac_ros2_ws/src/isaac_sim_integration/: package.xml  setup.cfg  setup.py
isaac_ros2_ws/src/isaac_sim_integration/isaac_sim_integration/: isaac_sim_bridge.py  sensor_publisher_node.py
isaac_ros2_ws/src/isaac_vslam_demos/: package.xml  setup.cfg  setup.py
isaac_ros2_ws/src/isaac_vslam_demos/isaac_vslam_demos/: vslam_mapper.py  vslam_node.py
rag-backend/: requirements.txt
specs/001-book-embeddings/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ui-improvement/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-book-rag-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-retrieval-pipeline-validation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-rag-agent-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-backend-frontend-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/docusaurus-book-site/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/module-1-robotic-nervous-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/module-2-digital-twin/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/module-2-docusaurus-setup/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/module-3-ai-robot-brain/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/module-4-vla/: plan.md  spec.md  tasks.md
vla_ros2_ws/src/vla_speech_recognition/: package.xml  setup.cfg  setup.py
vla_ros2_ws/src/vla_speech_recognition/vla_speech_recognition/: audio_capture_node.py  whisper_node.py
(+59 files in other folders)
